# yeg-dev-coe-scraper

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
scraper/: __main__.py
scraper/infrastructure/persistence/: db_context.py
scraper/model/: scraper_driver.py
scraper/model/coe/common/: accordion_section.py  tile.py
scraper/model/coe/planning/: neighbourhood.py  pages.py  project.py  project_profile.py  ward.py
scraper/model/coe/planning/db/: _base.py  planning_project.py  planning_project_repository.py
scraper/services/config/: config.yaml  config_service.py
